--- a/public/.htaccess
+++ b/public/.htaccess
@@ -130,7 +130,7 @@ AddType application/javascript .js
     RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
     RewriteRule ^ https://%1%{REQUEST_URI} [L,R=301]
     
-    # Roteamento para páginas
+    # Roteamento original
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
