--- a/public/.htaccess
+++ b/public/.htaccess
@@ -122,12 +122,10 @@ AddType application/javascript .js
 <IfModule mod_rewrite.c>
     RewriteEngine On
     
-    # Força HTTPS
+    # Primeiro remove www e força HTTPS em uma única regra
+    RewriteCond %{HTTP_HOST} ^www\. [NC,OR]
     RewriteCond %{HTTPS} off
-    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-    
-    # Remove www
-    RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+    RewriteCond %{HTTP_HOST} ^(?:www\.)?(.+)$ [NC]
     RewriteRule ^ https://%1%{REQUEST_URI} [L,R=301]
     
     # Roteamento original
