--- a/public/.htaccess
+++ b/public/.htaccess
@@ -91,16 +91,18 @@ AddType application/javascript .js
     AddType application/javascript .js
 </IfModule>
 
-# Força HTTPS - versão simplificada
+# Força HTTPS - regra mais rigorosa
 RewriteEngine On
-RewriteCond %{HTTPS} off
-RewriteCond %{HTTP:X-Forwarded-Proto} !https
-RewriteCond %{HTTP_HOST} !^www\. [NC]
-RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1 [R=301,L]
+RewriteCond %{SERVER_PORT} !^443$
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-# Depois, remove www se presente e força HTTPS
+# Garante que www seja removido e HTTPS seja usado
+RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC,OR]
+RewriteCond %{HTTPS} off
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301,NE]
+# Depois remove www se presente
 RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
-RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
+RewriteRule ^ https://%1%{REQUEST_URI} [L,R=301,NE]
 
 # Content Security Policy (CSP)
 <IfModule mod_headers.c>
