--- a/public/.htaccess
+++ b/public/.htaccess
@@ -57,9 +57,9 @@ RewriteEngine On
     RewriteCond %{REQUEST_FILENAME}.php -f
     RewriteRule ^([^\.]+)$ $1.php [NC,L]
 
-    RewriteEngine on
-    RewriteCond %{HTTP_HOST} ^www\.matheusrpsouza\.com [NC]
-    RewriteRule (.*) http://matheusrpsouza.com/$1 [R=301,L]
+RewriteEngine on
+    RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+    RewriteRule ^(.*)$ http://%1%{REQUEST_URI} [R=301,QSA,NC,L]
 </IfModule>
 
 # Cache para arquivos estáticos
