--- a/public/.htaccess
+++ b/public/.htaccess
@@ -40,32 +40,20 @@ RewriteEngine On
 # Regras de reescrita para arquivos estáticos
 <IfModule mod_rewrite.c>
     RewriteEngine On
-    RewriteBase /
     
-    # Permitir acesso direto a arquivos existentes
-    RewriteCond %{REQUEST_FILENAME} -f [OR]
-    RewriteCond %{REQUEST_FILENAME} -d
-    RewriteRule ^ - [L]
+    # Considera o X-Forwarded-Proto para HTTPS
+    RewriteCond %{HTTP:X-Forwarded-Proto} !https
+    RewriteCond %{HTTPS} off
+    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
     
-    # Redirecionar todas as outras requisições para o index.php
+    # Remove www
+    RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+    RewriteRule ^ https://%1%{REQUEST_URI} [L,R=301]
+    
+    # Roteamento original
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.*)$ index.php [L,QSA]
-    
-    # Garantir que as URLs sem .php funcionem
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME}.php -f
-    RewriteRule ^([^\.]+)$ $1.php [NC,L]
-
-    RewriteEngine On
-
-    RewriteCond %{HTTPS} off
-    RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
-    RewriteRule ^ http://%1%{REQUEST_URI} [R=301,L]
-
-    RewriteCond %{HTTPS} on
-    RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
-    RewriteRule ^ https://%1%{REQUEST_URI} [R=301,L]
+    RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
 </IfModule>
 
 # Cache para arquivos estáticos
