--- a/public/.htaccess
+++ b/public/.htaccess
@@ -41,12 +41,7 @@ RewriteEngine On
 <IfModule mod_rewrite.c>
     RewriteEngine On
     
-    # Considera o X-Forwarded-Proto para HTTPS
-    RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteCond %{HTTPS} off
-    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-    
-    # Remove www
+    # Remove www apenas
     RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
     RewriteRule ^ https://%1%{REQUEST_URI} [L,R=301]
     
